Fix BaseAudioContext::TraceWrappers to reach the EventTarget data.

Previously it was not invoking EventTargetWithInlineData's wrapper-tracing
method, so this was getting lost in the override. This bug was previously
hidden by the redundant tracing of event listeners which was removed in
r491479: https://chromium.googlesource.com/chromium/src/+/d68025ec

A layout test for this case has been added.

Bug: 756611
Change-Id: I98c8dc49eef3b49c20788a55ca2843521051cd5e
Reviewed-on: https://chromium-review.googlesource.com/627421
Commit-Queue: Jeremy Roman <jbroman@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Raymond Toy <rtoy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496511}
Former-commit-id: b143568509fee3ab04070a7aba05189d48ea87a2